[gd_scene load_steps=3 format=3 uid="uid://1reg6ycl4j81"]

[ext_resource type="Script" path="res://Scenes and Scripts/PlayerCharacter/weapon_tree.gd" id="1_2yqmb"]
[ext_resource type="Texture2D" uid="uid://bqvf40tx5j2pj" path="res://Assets/weapons.png" id="2_r6i74"]

[node name="WeaponTree" type="Node2D"]
process_mode = 3
z_index = 50
script = ExtResource("1_2yqmb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(669, 669)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -334.5
offset_top = 20.0
offset_right = 334.5
offset_bottom = 689.0
grow_horizontal = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 50
columns = 3

[node name="1" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Weapon1" type="Sprite2D" parent="CanvasLayer/GridContainer/1"]
position = Vector2(75, 73)
scale = Vector2(4, 4)
texture = ExtResource("2_r6i74")
hframes = 18

[node name="Quant1" type="Label" parent="CanvasLayer/GridContainer/1/Weapon1"]
offset_left = -19.375
offset_top = 9.25
offset_right = 20.625
offset_bottom = 32.25
text = "0000"

[node name="Label1" type="Label" parent="CanvasLayer/GridContainer/1"]
layout_mode = 0
offset_left = 129.5
offset_top = -4.0
offset_right = 169.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 40
text = "1"

[node name="2" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
disabled = true

[node name="Weapon2" type="Sprite2D" parent="CanvasLayer/GridContainer/2"]
position = Vector2(75, 73)
scale = Vector2(4, 4)
texture = ExtResource("2_r6i74")
hframes = 18
frame = 1

[node name="Quant2" type="Label" parent="CanvasLayer/GridContainer/2/Weapon2"]
offset_left = -19.375
offset_top = 9.25
offset_right = 20.625
offset_bottom = 32.25
text = "0000"

[node name="Label2" type="Label" parent="CanvasLayer/GridContainer/2"]
offset_left = 129.5
offset_top = -4.0
offset_right = 169.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 40
text = "2"

[node name="3" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Weapon3" type="Sprite2D" parent="CanvasLayer/GridContainer/3"]
position = Vector2(75, 73)
scale = Vector2(4, 4)
texture = ExtResource("2_r6i74")
hframes = 18
frame = 2

[node name="Quant3" type="Label" parent="CanvasLayer/GridContainer/3/Weapon3"]
offset_left = -19.375
offset_top = 9.25
offset_right = 20.625
offset_bottom = 32.25
text = "0000"

[node name="Label3" type="Label" parent="CanvasLayer/GridContainer/3"]
offset_left = 129.5
offset_top = -4.0
offset_right = 169.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 40
text = "3"

[node name="4" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Weapon4" type="Sprite2D" parent="CanvasLayer/GridContainer/4"]
position = Vector2(75, 73)
scale = Vector2(4, 4)
texture = ExtResource("2_r6i74")
hframes = 18
frame = 3

[node name="Quant4" type="Label" parent="CanvasLayer/GridContainer/4/Weapon4"]
offset_left = -19.375
offset_top = 9.25
offset_right = 20.625
offset_bottom = 32.25
text = "0000"

[node name="Label4" type="Label" parent="CanvasLayer/GridContainer/4"]
offset_left = 129.5
offset_top = -4.0
offset_right = 169.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 40
text = "4"

[node name="5" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Weapon5" type="Sprite2D" parent="CanvasLayer/GridContainer/5"]
position = Vector2(75, 73)
scale = Vector2(4, 4)
texture = ExtResource("2_r6i74")
hframes = 18
frame = 4

[node name="Quant5" type="Label" parent="CanvasLayer/GridContainer/5/Weapon5"]
offset_left = -19.375
offset_top = 9.25
offset_right = 20.625
offset_bottom = 32.25
text = "0000"

[node name="Label5" type="Label" parent="CanvasLayer/GridContainer/5"]
offset_left = 129.5
offset_top = -4.0
offset_right = 169.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 40
text = "5"

[node name="6" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Weapon6" type="Sprite2D" parent="CanvasLayer/GridContainer/6"]
position = Vector2(75, 73)
scale = Vector2(4, 4)
texture = ExtResource("2_r6i74")
hframes = 18
frame = 5

[node name="Quant6" type="Label" parent="CanvasLayer/GridContainer/6/Weapon6"]
offset_left = -19.375
offset_top = 9.25
offset_right = 20.625
offset_bottom = 32.25
text = "0000"

[node name="Label6" type="Label" parent="CanvasLayer/GridContainer/6"]
offset_left = 129.5
offset_top = -4.0
offset_right = 169.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 40
text = "6"

[node name="7" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Weapon7" type="Sprite2D" parent="CanvasLayer/GridContainer/7"]
position = Vector2(75, 73)
scale = Vector2(4, 4)
texture = ExtResource("2_r6i74")
hframes = 18
frame = 6

[node name="Quant7" type="Label" parent="CanvasLayer/GridContainer/7/Weapon7"]
offset_left = -19.375
offset_top = 9.25
offset_right = 20.625
offset_bottom = 32.25
text = "0000"

[node name="Label7" type="Label" parent="CanvasLayer/GridContainer/7"]
offset_left = 129.5
offset_top = -4.0
offset_right = 169.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 40
text = "7"

[node name="8" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Weapon8" type="Sprite2D" parent="CanvasLayer/GridContainer/8"]
position = Vector2(75, 73)
scale = Vector2(4, 4)
texture = ExtResource("2_r6i74")
hframes = 18
frame = 7

[node name="Quant8" type="Label" parent="CanvasLayer/GridContainer/8/Weapon8"]
offset_left = -19.375
offset_top = 9.25
offset_right = 20.625
offset_bottom = 32.25
text = "0000"

[node name="Label8" type="Label" parent="CanvasLayer/GridContainer/8"]
offset_left = 129.5
offset_top = -4.0
offset_right = 169.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 40
text = "8"

[node name="9" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Weapon9" type="Sprite2D" parent="CanvasLayer/GridContainer/9"]
position = Vector2(75, 73)
scale = Vector2(4, 4)
texture = ExtResource("2_r6i74")
hframes = 18
frame = 8

[node name="Quant9" type="Label" parent="CanvasLayer/GridContainer/9/Weapon9"]
offset_left = -19.375
offset_top = 9.25
offset_right = 20.625
offset_bottom = 32.25
text = "0000"

[node name="Label9" type="Label" parent="CanvasLayer/GridContainer/9"]
offset_left = 129.5
offset_top = -4.0
offset_right = 169.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 40
text = "9"

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -119.0
offset_top = -77.0
offset_right = 119.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "CANCEL"

[node name="ESC" type="Label" parent="CanvasLayer/Button"]
offset_left = 225.0
offset_top = 40.0
offset_right = 269.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 25
text = "ESC"

[node name="Next" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 134.0
offset_top = -157.0
offset_right = 372.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "NEXT"

[node name="Craft" type="Label" parent="CanvasLayer/Next"]
offset_left = 213.0
offset_top = 40.0
offset_right = 257.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 25
text = "S"

[node name="Previous" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -371.0
offset_top = -155.0
offset_right = -133.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "PREV"

[node name="Process" type="Label" parent="CanvasLayer/Previous"]
offset_left = 213.0
offset_top = 40.0
offset_right = 257.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 25
text = "A"

[connection signal="pressed" from="CanvasLayer/GridContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="CanvasLayer/Previous" to="." method="_on_previous_pressed"]
